feat: Вроде доделал верстку записи на обслуживание